Implémentation des éléments de la maquette en HTML

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,6 +15,10 @@ body{
 .menu li{
     display: inline;
 }
+/*competence*/
+.skill-icon{
+    width: 7rem;
+}
 /* utils */
 .align{
     margin-left: 3rem;
