--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,26 +3,162 @@ html, body{
     margin: 0;
     padding: 0;
 }
-body{
+html{
     font-size: 62.5%;
 }
-
+@font-face {
+    font-family: 'Yanone';
+    src: url('../fonts/yanone.ttf');
+}
+body{
+    font-family: 'Yanone', sans-serif;
+}
 /* menu*/
 .menu{
     background-color: #2E2C38;
     color: white;
+    padding-top: 1.2rem;
+    padding-bottom: 1.2rem;
 }
-.menu li{
+.menu .align-nav li{
     display: inline;
+    margin-right: 1.7rem;
+}
+.menu .align-nav li a{
+    font-size: 3rem;
+    text-decoration: none;
+}
+.menu-col-1{
+    justify-content: start;
+}
+.menu-col-1 a{
+    color :white;
+    font-size: 5.2rem;
+    text-decoration: none;
+    align-items: center; 
+}
+.menu-col-2{
+    justify-content: end;   
+    align-items: center; 
+}
+/*hero*/
+.hero{
+    margin-top: 16.5rem;
+    margin-bottom: 18.1rem;
+}
+.hero img{
+    margin-left: 23.1rem;
+}
+.hero h1{
+    font-size: 6.4rem;
+}
+.hero p{
+    font-size: 4.8rem;
+}
+.hero-col-2{
+    margin-right: 8.8rem;
+}
+/* A propos de moi */
+.about-me h2{
+    font-size: 6.4rem;
+}
+.about-me p{
+    font-size: 4.8rem;
 }
 /*competence*/
+.skill{
+    margin-top: 6.5rem;
+    margin-bottom: 13rem;
+}
+.skill-box{
+    margin-bottom: 3rem;
+}
+.skill-container{
+    background-color: #B4B2BB;
+    width: 100%;
+    height: 100%;
+    margin-left: 3rem;
+    border-radius: 5rem;
+}
+.skill-col-1{
+    margin-right: 3.3rem;
+}
+.skill h2{
+    font-size: 6.4rem;
+    text-align: center;
+}
 .skill-icon{
-    width: 7rem;
+    width: 6rem;
+}
+.skill-html{
+    border-radius: 50px;
+    width: 80%;
+    height: 100%;
+}
+.skill-css{
+    border-radius: 50px;
+    width: 75%;
+    height: 100%;
+}
+.skill-php{
+    border-radius: 50px;
+    width: 70%;
+    height: 100%;
+}
+.skill-java{
+    border-radius: 50px;
+    width: 70%;
+    height: 100%;
+}
+.skill-c{
+    border-radius: 50px;
+    width: 30%;
+    height: 100%;
+}
+.skill-bootstrap    {
+    border-radius: 50px;
+    width: 80%;
+    height: 100%;
+}
+/* projet */
+.projet-section .align{
+    margin-top: 5.7rem;
+    margin-bottom: 5.7rem;
+}
+.projet-btn{
+    width: 45%;
+}
+.projet-btn h2{
+    font-size: 6.4rem;
+}
+.projets{
+    overflow: scroll;   
+}
+.projet{
+    margin-right: 2.5rem; 
+    margin-left: 2.5rem;
+}
+.btn-container{
+    margin-top: auto;
+}
+.btn-container button{
+    width: 4rem;
+    height: 4rem;
+    border-radius: 5rem;
+    border: none;
+    cursor: pointer;
+}
+.btn-left{
+    margin-right: 3rem;
 }
 /* utils */
-.align{
+.align-nav{
     margin-left: 3rem;
     margin-right: 3rem;
+}
+.align{
+    margin-left: 9rem;
+    margin-right: 9rem;
 }
 .link{
     text-decoration: none;;
@@ -38,9 +174,15 @@ body{
 .bg-black{
     background-color: #2E2C38;
 }
+.bg-white{
+    background: white;
+}
 .text-light{
     color: white;
 }
 .w-100{
     width: 100%;
+}
+.w-auto{
+    width: auto;
 }
