--- a/src/css/style.css
+++ b/src/css/style.css
@@ -151,6 +151,66 @@ body{
 .btn-left{
     margin-right: 3rem;
 }
+/* Contact */
+#contact h2{
+    font-size: 6.4rem;
+    text-align: center
+}
+#contact input{
+    border-radius: 5rem;
+    margin-bottom: 2.3rem;
+    height: 6.1rem;
+    background-color: #C4C4C4;
+    border: none;
+    font-family: 'Yanone';
+    font-size: 4rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+#contact textarea{
+    min-width: 100%;
+    max-width: 100%;
+    border-radius: 5rem;
+    margin-bottom: 2.3rem;
+    background-color: #C4C4C4;
+    border: none;
+    font-family: 'Yanone';
+    font-size: 4rem;
+    min-height: 26.8rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    padding-top: 1rem;
+}
+.input-col-1{
+    margin-right: 5.2rem;
+}
+#contact button{
+    border-radius: 5rem;
+    font-family: 'Yanone';
+    font-size: 4rem;
+    border: none;
+    width: 19.8rem;
+    height: 5.3rem;
+    margin-left: auto;
+}
+/* Footer */
+footer{
+    justify-self: flex-end;
+    text-align: center;
+    margin-top: 6.1rem;
+}
+.infos{
+    font-size: 4.5rem;
+}
+.info{
+    justify-content: center;
+}
+.info a{
+    color: white;
+}
+.info a:hover{
+    color: darkcyan;
+}
 /* utils */
 .align-nav{
     margin-left: 3rem;
